--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link href="assets/fontawesome/css/all.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="main.css" />
     <title>LOUIS Internet Testaufgabe</title>
   </head>
 
