--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </header>
 
       <div class="hero flex-container">
-        <img src="/img/web_baustelle.svg" alt="Web Baustelle" />
+        <img src="img/web_baustelle.svg" alt="Web Baustelle" />
         <div class="flex-headline">
           <span class="headline-element">HIER</span
           ><span class="headline-element">ENTSTEHT</span
